FH-9 | Renter header

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,78 +1,76 @@
-<div class="footer">
-    <div class="overlap-wrapper">
-      <div class="overlap">
+<!-- <div class="footer">
+  <div class="overlap-wrapper">
+    <div class="overlap">
 
-        <footer class="overlap-group-wrapper">
-          <div class="overlap-group">
+      <footer class="overlap-group-wrapper">
+        <div class="overlap-group">
 
 
-            <p class="adress"><span class="text-wrapper">Adress</span> <span class="span">&nbsp;</span></p>
-            <p class="div">
-              Floor 38, Kloud Saigon Centre Tower 2, 65 Le Loi strict, 1 District , Ho Chi Minh City, Vietnam
-            </p>
-            <iframe class="map" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0"
-              marginwidth="0"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d106.699087!3d10.771493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f590c5c7927%3A0x4f06db837dd7be8d!2sYour%20Location!5e0!3m2!1sen!2sus!4v1637750920408!5m2!1sen!2sus"></iframe>
-            <div class="group">
-              <div class="flexcontainer">
-                <p class="text">
-                  <span class="text-wrapper-2">Booking Cancellation Policy<br /></span>
-                </p>
-                <p class="text">
-                  <span class="text-wrapper-2">User Benefits Policy<br /></span>
-                </p>
-                <p class="text">
-                  <span class="text-wrapper-2">Owner Benefits Policy<br /></span>
-                </p>
-                <p class="text"><span class="text-wrapper-2">Security Policy</span></p>
-              </div>
-              <div class="flexcontainer-2">
-                <p class="text">
-                  <span class="text-wrapper-2">Colaborate<br /></span>
-                </p>
-                <p class="text">
-                  <span class="text-wrapper-2">Contribute<br /></span>
-                </p>
-                <p class="text"><span class="text-wrapper-2">FAQ</span></p>
-              </div>
-              <div class="text-wrapper-3">Policy</div>
-              <div class="text-wrapper-4">Download App</div>
-              <div class="text-wrapper-5">Other</div>
+          <p class="adress"><span class="text-wrapper">Adress</span> <span class="span">&nbsp;</span></p>
+          <p class="div">
+            Floor 38, Kloud Saigon Centre Tower 2, 65 Le Loi strict, 1 District , Ho Chi Minh City, Vietnam
+          </p>
+          <iframe class="map" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d106.699087!3d10.771493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f590c5c7927%3A0x4f06db837dd7be8d!2sYour%20Location!5e0!3m2!1sen!2sus!4v1637750920408!5m2!1sen!2sus"></iframe>
+          <div class="group">
+            <div class="flexcontainer">
+              <p class="text">
+                <span class="text-wrapper-2">Booking Cancellation Policy<br /></span>
+              </p>
+              <p class="text">
+                <span class="text-wrapper-2">User Benefits Policy<br /></span>
+              </p>
+              <p class="text">
+                <span class="text-wrapper-2">Owner Benefits Policy<br /></span>
+              </p>
+              <p class="text"><span class="text-wrapper-2">Security Policy</span></p>
             </div>
-            <p class="copyright-by">Copyright © 2023 By FoxHub&nbsp;&nbsp;Company</p>
+            <div class="flexcontainer-2">
+              <p class="text">
+                <span class="text-wrapper-2">Colaborate<br /></span>
+              </p>
+              <p class="text">
+                <span class="text-wrapper-2">Contribute<br /></span>
+              </p>
+              <p class="text"><span class="text-wrapper-2">FAQ</span></p>
+            </div>
+            <div class="text-wrapper-3">Policy</div>
+            <div class="text-wrapper-4">Download App</div>
+            <div class="text-wrapper-5">Other</div>
           </div>
-        </footer>
-        <a href="https://www.tiktok.com/@foxhub05?lang=en" target="_blank">
-          <img class="icon-tiktok-sq" src="img/icon-tiktok-sq.png" />
-        </a>
-        <a href="https://www.facebook.com/foxhubvn" target="_blank">
-          <img class="icon-facebook-icon" src="img/icon-facebook-icon.png" />
-        </a>
+          <p class="copyright-by">Copyright © 2023 By FoxHub&nbsp;&nbsp;Company</p>
+        </div>
+      </footer>
+      <a href="https://www.tiktok.com/@foxhub05?lang=en" target="_blank">
+        <img class="icon-tiktok-sq" src="img/icon-tiktok-sq.png" />
+      </a>
+      <a href="https://www.facebook.com/foxhubvn" target="_blank">
+        <img class="icon-facebook-icon" src="img/icon-facebook-icon.png" />
+      </a>
 
-        <a href="https://www.instagram.com/foxhub.vn/" target="_blank">
-          <img class="icon-instagram" src="img/icon-instagram-square-icon.png" />
-        </a>
-        <img class="icon-envelope" src="img/icon-envelope.png" />
-        <!--Box input email-->
-        <div class="box email-input-container">
-          <form class="form">
-            <label>Sign up for our newsletter</label>
-            <input type="email" placeholder="Enter your email"  class="email-input" />
-            <button type="submit" class="submit-button">SUBSCRIBE</button>
-          </form>
-        </div> 
-        <a href="https://play.google.com/store/games?device=windows" target="_blank">
-          <img class="google-play" src="img/image-26.png" />
-        </a>
-
-        <a href="https://www.apple.com/app-store/" target="_blank">
-          <img class="app-store" src="img/image-27.png" />
-        </a>
-
-        <a href="http://online.gov.vn/Home/WebDetails/88645" target="_blank">
-          <img class="bocongthuong" src="img/image-28.png" />
-        </a>
-        
+      <a href="https://www.instagram.com/foxhub.vn/" target="_blank">
+        <img class="icon-instagram" src="img/icon-instagram-square-icon.png" />
+      </a>
+      <img class="icon-envelope" src="img/icon-envelope.png" />
+      <div class="box email-input-container">
+        <form class="form">
+          <label>Sign up for our newsletter</label>
+          <input type="email" placeholder="Enter your email" class="email-input" />
+          <button type="submit" class="submit-button">SUBSCRIBE</button>
+        </form>
       </div>
+      <a href="https://play.google.com/store/games?device=windows" target="_blank">
+        <img class="google-play" src="img/image-26.png" />
+      </a>
+
+      <a href="https://www.apple.com/app-store/" target="_blank">
+        <img class="app-store" src="img/image-27.png" />
+      </a>
+
+      <a href="http://online.gov.vn/Home/WebDetails/88645" target="_blank">
+        <img class="bocongthuong" src="img/image-28.png" />
+      </a>
+
     </div>
   </div>
+</div> -->
