--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav>
+<!-- <nav>
     <a class="logo" href="#">
         <img src="/Header/logo.png"  height="50" alt="">
     </a>
@@ -20,4 +20,4 @@
         <button class="login" type="button">Log in</button>
         <button class="signup" type="button">Sign up</button>
     </form>
-</nav>
+</nav> -->
