--- a/src/app/components/history-detail/history-detail.component.html
+++ b/src/app/components/history-detail/history-detail.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="history-detail-container">
     <div class="zoom-wrapper">
       <img src="img/room.jpg" alt="Forest" />
@@ -37,4 +37,4 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
