--- a/src/app/components/home-service/home-service.component.html
+++ b/src/app/components/home-service/home-service.component.html
@@ -1,4 +1,4 @@
-<div class="renter-home-service">
+<!-- <div class="renter-home-service">
     <div class="div">
       <div class="overlap">
         <div class="text-wrapper">Homepage</div>
@@ -112,4 +112,4 @@
       <div> <img src="img/earth.jpg" width="150px" height="150px" class="rectangle-3"/> </div>
       <div><img src="img/shakehand.jpg" width="150px" height="150px" class="rectangle-4"/></div>
     </div>
-  </div>
+  </div> -->
