FH-9 | Top rate section

--- a/src/app/pages/renter/home/components/carousel/carousel.component.html
+++ b/src/app/pages/renter/home/components/carousel/carousel.component.html
@@ -1,1 +1,7 @@
-<p>carousel works!</p>
+<ngb-carousel>
+    <ng-template ngbSlide *ngFor="let image of images">
+        <div class="picsum-img-wrapper">
+            <img [src]="image" alt="Random first slide" />
+        </div>
+    </ng-template>
+</ngb-carousel>
