--- a/src/app/pages/renter/home/home.component.html
+++ b/src/app/pages/renter/home/home.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
-<app-top-rate></app-top-rate>
+<div style="background-color: #F5EEE8;">
+    <app-header></app-header>
+    <app-top-rate></app-top-rate>
+</div>
