--- a/src/app/pages/renter/home/components/top-rate/top-rate.component.html
+++ b/src/app/pages/renter/home/components/top-rate/top-rate.component.html
@@ -2,8 +2,42 @@
     <h2>
         BEST FOR YOU
     </h2>
-    <div class="top-rate-container d-flex justify-content-between">
-        <div class="top-rate-item col">
+    <div class="top-rate-container d-flex justify-content-around">
+        <div class="top-rate-item">
+            <app-carousel></app-carousel>
+            <p class="item-address">
+                Thu Duc District - HCM City
+                <span>
+                    <i class="bi bi-star-fill"></i>
+                    5 (42)
+                </span>
+            </p>
+            <p class="item-owner">
+                Owner: Nguyen Van A
+            </p>
+            <p class="item-price">
+                Price: $15/day
+            </p>
+        </div>
+
+        <div class="top-rate-item">
+            <app-carousel></app-carousel>
+            <p class="item-address">
+                Thu Duc District - HCM City
+                <span>
+                    <i class="bi bi-star-fill"></i>
+                    5 (42)
+                </span>
+            </p>
+            <p class="item-owner">
+                Owner: Nguyen Van A
+            </p>
+            <p class="item-price">
+                Price: $15/day
+            </p>
+        </div>
+
+        <div class="top-rate-item">
             <app-carousel></app-carousel>
             <p class="item-address">
                 Thu Duc District - HCM City
