--- a/src/app/pages/renter/home/components/header/header.component.html
+++ b/src/app/pages/renter/home/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="navbar-container">
-        <img src="../../../../../../assets/images/logo.jpg">
+        <img src="assets/images/logo.jpg">
         <nav class="nav">
             <a class="nav-link" href="#">FoxHub’s Story</a>
             <a class="nav-link" href="#">Reservation</a>
