--- a/src/app/pages/renter/home/components/footer/footer.component.html
+++ b/src/app/pages/renter/home/components/footer/footer.component.html
@@ -1,1 +1,53 @@
-<p>footer works!</p>
+<footer>
+    <div class="footer-main-content">
+        <section class="address-section">
+            <h4>Address</h4>
+            <p>
+                Floor 38, Kloud Saigon Centre Tower 2, 65 Le Loi strict, 1 District , Ho Chi Minh City, Vietnam
+            </p>
+            <iframe class="map" width="100%" height="300" frameborder="0" scrolling="no" marginheight="0"
+                marginwidth="0" src="https://www.google.com/maps/embed">
+            </iframe>
+            <!-- <google-map [center]="center" [zoom]="zoom">
+            </google-map> -->
+        </section>
+        <section>
+            <h4>Policy</h4>
+            <ul>
+                <li>Booking Cancellation Policy</li>
+                <li>User Benefits Policy</li>
+                <li>Owner Benefits Policy</li>
+                <li>Security Policy</li>
+            </ul>
+            <img src="assets/images/gov.png" class="gov-image">
+        </section>
+        <section>
+            <h4>Other</h4>
+            <ul>
+                <li>Collaborate</li>
+                <li>Contribute</li>
+                <li>FAQ</li>
+            </ul>
+            <div class="contact-icon-container">
+                <a href="#"><img src="assets/icons/facebook.png"></a>
+                <a href="#"><img src="assets/icons/instagram.png"></a>
+                <a href="#"><img src="assets/icons/mail.png"></a>
+                <a href="#"><img src="assets/icons/tiktok.png"></a>
+            </div>
+        </section>
+        <section>
+            <h4>
+                Download App
+            </h4>
+            <div class="download-icon-container">
+                <img src="assets/images/google-play.png">
+                <img src="assets/images/app-store.png">
+            </div>
+        </section>
+    </div>
+    <p>
+        <i>
+            Copyright © 2023 By FoxHub Company
+        </i>
+    </p>
+</footer>
