--- a/src/app/pages/renter/home/components/log-in-modal/log-in-modal.component.html
+++ b/src/app/pages/renter/home/components/log-in-modal/log-in-modal.component.html
@@ -1,26 +1,55 @@
 <div class="modal-header">
-    <h3 class="modal-title">Hey, homie</h3>
-    <p>Welcome back! Please enter your details</p>
+    <div>
+        <h3>Hey, homie</h3>
+        <p>Welcome back! Please enter your details</p>
+    </div>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()"></button>
 </div>
 <div class="modal-body">
     <form>
-        <div class="form-group">
-            <input type="email" class="form-control" placeholder="Enter email">
+        <div class="form-input-container">
+            <div class="form-group">
+                <input type="email" class="form-control" placeholder="Enter email">
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="d-flex justify-content-between">
+                <div class="form-group form-check p">
+                    <input type="checkbox" class="form-check-input" id="remember-me">
+                    <label class="form-check-label" for="remember-me">Remember me</label>
+
+                </div>
+                <a href="#">Forgot password?</a>
+            </div>
+            <div class="button-group">
+                <button type="submit" class="btn">Login</button>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="password" class="form-control" placeholder="Password">
-        </div>
-        <div class="form-group form-check">
-            <input type="checkbox" class="form-check-input" id="remember-me">
-            <label class="form-check-label" for="remember-me">Remember me</label>
-        </div>
-        <a href="#">Forgot password?</a>
-        <button type="submit" class="btn">Login</button>
-        <div class="divider">Or</div>
     </form>
 </div>
+<div class="divider">Or</div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-danger" (click)="deleteFashion()">Delete</button>
-    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Close</button>
+    <div class="d-flex flex-column login-option-list">
+        <button type="button" class="btn btn-outline-dark">
+            <img src="assets/svg/apple.svg">
+            Continue with Apple
+        </button>
+        <button type="button" class="btn btn-outline-dark">
+            <img src="assets/svg/google.svg">
+            Continue with Google
+        </button>
+
+        <button type="button" class="btn btn-outline-dark">
+            <img src="assets/svg/facebook.svg">
+            Continue with Facebook
+        </button>
+    </div>
+    <div class="sign-up-option">
+        <p>
+            Don't have an account?
+            <br>
+            <button type="button" class="btn" (click)="switchToSignUpModal()">Sign up</button>
+        </p>
+    </div>
 </div>
