--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+.sign-up-modal {
+    max-width: 340px !important;
+}
+
+.log-in-modal {
+    max-width: 380px !important;
+}
