--- a/src/app/pages/renter/home/components/header/header.component.html
+++ b/src/app/pages/renter/home/components/header/header.component.html
@@ -1,17 +1,5 @@
 <header>
-    <div class="navbar-container">
-        <img src="assets/images/logo.jpg">
-        <nav class="nav">
-            <a class="nav-link" href="#">FoxHub’s Story</a>
-            <a class="nav-link" href="#">Reservation</a>
-            <a class="nav-link" href="#">Home Service</a>
-            <a class="nav-link" href="#">Blog</a>
-        </nav>
-        <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn log-in" (click)="openLogInModal()">Login</button>
-            <button type="button" class="btn sign-up" (click)="openSignUpModal()">Sign up</button>
-        </div>
-    </div>
+    <app-header-nav-bar></app-header-nav-bar>
     <h1>
         UNLOCK VIETNAM
         <br>
