--- a/src/app/pages/renter/home/home.component.html
+++ b/src/app/pages/renter/home/home.component.html
@@ -1,5 +1,7 @@
-<div style="background-color: #F5EEE8;">
+<div style="background-color: #F5EEE8;" class="d-flex flex-column justify-content-between home-container">
     <app-header></app-header>
     <app-top-rate></app-top-rate>
+    <app-accommodation-list></app-accommodation-list>
+    <app-adventure-section></app-adventure-section>
     <app-footer></app-footer>
 </div>
