--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+
 :host {
     display: block;
     height: 100%;
+}
+
+body {
+    font-family: Raleway, sans-serif;
 }
