--- a/src/app/pages/renter/sign-up-form/sign-up-form.component.css
+++ b/src/app/pages/renter/sign-up-form/sign-up-form.component.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-body {
-    font-family: Raleway, sans-serif;
-    background-color: #ffffff;
-    font-size: 14px;
+.img-wrapper {
+    height: 500px;
+}
+
+.img-wrapper img {
+    height: 100%;
 }
 
 h2 {
@@ -11,10 +12,10 @@ h2 {
 
 label {
     font-weight: bold;
+    margin-bottom: 8px;
 }
 
 input {
-    width: calc(100% - 14px);
     padding: 10px;
     display: inline-block;
     border: 1px solid #ccc;
@@ -22,44 +23,20 @@ input {
     border-radius: 10px;
 }
 
-button {
-    background-color: #CD5C08;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 50%;
-    border-radius: 8px;
-}
-
-.img-wrapper {
-    height: 500px;
-    border-radius: 10px;
-}
-
-img {
-    height: 100%;
-}
-
 input[type="checkbox"] {
     width: 16px;
     height: 16px;
 }
 
-hr {
-    border: 0;
-    height: 1px;
-    background: #575757;
-    width: 77%;
-    margin: 20px auto;
+.form-check-label {
+    margin-left: 8px;
 }
 
-.btn-primary{
-    width:40%;
-    margin:auto;
-}
-
-.fix-size{
-    margin: 70px;
+.btn {
+    width: 36%;
+    padding: 12px 16px;
+    margin: 0 auto !important;
+    background-color: #CD5C08;
+    color: white;
+    border-radius: 4px;
 }
