--- a/src/app/pages/renter/sign-up-form/sign-up-form.component.html
+++ b/src/app/pages/renter/sign-up-form/sign-up-form.component.html
@@ -1,55 +1,52 @@
 <app-header-nav-bar></app-header-nav-bar>
-<div class="d-flex justify-content-around ">
-  <div class="fix-size">
-    <div class="img-wrapper">
-      <img src="assets/images/formsignup-image.png">
-    </div>
-    <div class="content-form justify-content-between">
-      <h2>Create New Account</h2>
-      <hr>
-      <form class="d-flex flex-column">
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="firstName">First Name</label>
-              <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="lastName">Last Name</label>
-              <input type="text" class="form-control" id="lastName" placeholder="Enter last name">
-            </div>
+<div class="d-flex justify-content-evenly mt-5">
+  <div class="img-wrapper">
+    <img src="assets/images/formsignup-image.png">
+  </div>
+  <div class="d-flex flex-column align-items-center">
+    <h2>Create New Account</h2>
+    <form class="d-flex flex-column justify-content-between flex-grow-1">
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" class="form-control" id="firstName" placeholder="Enter first name">
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Enter email">
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group">
-              <label for="number">Phone Number</label>
-              <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
-            </div>
+        <div class="col">
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" class="form-control" id="lastName" placeholder="Enter last name">
           </div>
         </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" class="form-control" id="password" placeholder="Enter password">
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter email">
+          </div>
         </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirm Password</label>
-          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm password">
+        <div class="col">
+          <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input type="tel" class="form-control" id="phone" placeholder="Enter phone number">
+          </div>
         </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="agree-policy">
-          <label class="form-check-label" for="exampleCheck1">I agree with policy</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" placeholder="Enter password">
+      </div>
+      <div class="form-group">
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" class="form-control" id="confirm-password" placeholder="Confirm password">
+      </div>
+      <div class="form-check">
+        <input type="checkbox" class="form-check-input" id="agree-policy">
+        <label class="form-check-label" for="agree-policy">I agree with policy</label>
+      </div>
+      <button type="submit" class="btn">Submit</button>
+    </form>
   </div>
 </div>
