FH-24 | Update Story

--- a/src/app/pages/renter/story/story.component.css
+++ b/src/app/pages/renter/story/story.component.css
@@ -3,12 +3,10 @@ body {
 }
 
 .header{
-    left: 0;
     width: 100%;
     background-color: #bf6326; 
     color: #fff; 
-    padding: 15px; 
-    border-bottom: 1px solid #ddd;
+    padding: 16px; 
     font-family: Helvetica;
     text-align: center;
     font-weight: bold;
@@ -24,25 +22,21 @@ body {
 .left-content {
     width: 700px;
     top: 300px;
-    left: 0;
     font-family: "Inter-Regular", Helvetica;
     color: #000000;
     font-size: 15px;
     text-align: justify;
     line-height: 30px;
-    margin-top: 80px;
-    margin-left: 100px;
+    margin: 80px 0px 0px 100px;
 }
 
 .right-content {
     position: absolute;
-    width: 10px;
+    width: 20px;
     height: 100px;
     top: 60px;
     right: 490;
-    margin-top: 80px;
-    margin-right: 1px; 
-    margin-left: 930px;
+    margin: 80px 0px 0px 900px;
     transition: transform 0.3s ease;
 }   
 
@@ -52,82 +46,64 @@ body {
 }
 
 .right-content img {
-    width: 350px; 
+    width: 360px; 
     height: 420px; 
-    border-radius: 0 100px 0 0;
+    border-radius: 0 100px;
 }
 
-.middle{
-    position: absolute;
-    left: 0;
-    top: 650px;
+.mission-vision {
+    margin-top: 160px;
     width: 100%; 
-    height: 275px;
+    height: 280px;
     background-color: #292E36;
     color: #fff;
-    padding: 15px;
+    padding: 16px;
     opacity: 0.9;
 }
 
 .mission {
-    position: relative;
-    top: 80px;
-    width: 588px;
+    margin-top: 20px;
+    width: 580px;
     margin-left: 40px;
     font-family: "Raleway-Italic", Helvetica;
     font-style: italic;
     color: #ffffff;
     font-size: 15px;
     text-align: center;
-    letter-spacing: 0;
-    line-height: 25.7px;
+}
+
+.mission-title {
+    margin-top: 60px;
+    margin-left: 260px;
+    font-family: "Raleway-Bold", Helvetica;
+    font-weight: 600;
+    color: #f3ece6;
+    font-size: 20px;
 }
 
 .vision {
-    position: relative;
-    top: -45px;
-    width: 588px;
-    margin-left: 750px;
-    margin-right: 40px;
+    margin-top: 20px;
+    margin-left: 740px;
+    margin-right: 60px;
     font-family: "Raleway-Italic", Helvetica;
     font-style: italic;
     font-weight: lighter;
     color: #ffffff;
     font-size: 15px;
     text-align: center;
-    letter-spacing: 0;
-    line-height: 25.7px;
-}
-
-.mission-title {
-    position: relative;
-    top: 70px;
-    width: 167px;
-    margin-left: 250px;
-    font-family: "Raleway-Bold", Helvetica;
-    font-weight: 600;
-    color: #f3ece6;
-    font-size: 20px;
-    text-align: center;
 }
 
 .vision-title {
-    position: relative;
-    top: -50px;
-    width: 167px;
+    margin-top: -132px;
     margin-left: 980px;
     font-family: "Raleway-Bold", Helvetica;
     font-weight: 600;
     color: #f3ece6;
     font-size: 20px;
-    text-align: center;
 }
 
 .founder-title {
-    position: relative;
-    width: 678px;
-    margin-top: 500px;
-    margin-left: 365px;
+    margin-top: 160px;
     font-family: "Raleway-Bold", Helvetica;
     color: #000000;
     font-size: 30px;
@@ -142,12 +118,11 @@ body {
 }
 
 .image-container img {
-    position: relative;
     width: 20%; 
     max-width: 100%; 
     height: auto; 
     transition: transform 0.3s ease;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 
 .image-container img:hover{
@@ -157,9 +132,7 @@ body {
 }
 
 .client {
-    position: absolute;
-    left: 0;
-    top: 1700px;
+    margin-top: 160px;
     width: 100%; 
     height: 400px;
     background-color: #f3ece6;
@@ -174,42 +147,38 @@ body {
     color: #bf6326; 
 }
 
-.ngoac{
-    position: relative;
-    width: 46px;
-    height: 34px;
-    margin-left: 670px;
-    margin-top: 350px;
+.quotation-mark {
+    width: 40px;
+    height: 40px;
+    margin-top: 20px;
+    margin-left: 640px;
+}
+
+.quotation-mark-flip {
+    transform: scaleX(-1);
+    margin-left: 640px;
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
 }
 
 .comment{
-    position: absolute;
     width: 840px;
-    top: 1855px;
-    left: 300px;
+    margin-top: 20px;
+    margin-left: 280px;
     font-family: "Cormorant Infant-Italic", Helvetica;
     font-style: italic;
     color: #000000;
     font-size: 15px;
     text-align: center;
-    line-height: 36.6px;
-}
-
-.ngoac-flip {
-    transform: scaleX(-1);
-    position: relative;
-    margin-left: 670px;
-    margin-top: 120px;
+    line-height: 40px;
 }
 
 .client-name{
-    position: relative;
-    width: fit-content;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-left: 600px;
     font-family: "Raleway-Bold", Helvetica;
     color: #000000;
     font-size: 20px;
     font-weight: bold;
-    text-align: center;
 }
