--- a/src/app/pages/renter/story/story.component.html
+++ b/src/app/pages/renter/story/story.component.html
@@ -1,9 +1,7 @@
-<!--header-->
 <p class="header">FoxHub's story</p>
 
-<!--Who is FoxHub?-->
 <div class="left-content">
-  <p class="title">Who is FoxHub? <img src="assets/svg/line-45.svg" /></p>
+  <p class="title">Who is FoxHub? <img src="assets/svg/line.svg" /></p>
   <p>
     FoxHub was born with the vision of becoming the leading accommodation
     connection platform in Vietnam, contributing to promoting the development of
@@ -27,50 +25,45 @@
   </p>
 </div>
 <div class="right-content">
-  <img src="assets/images/title.jpg" />
+  <img src="assets/images/landscape.jpg" />
 </div>
 
-<!--Mission-Vision-->
-<div>
-  <div class="middle">
-    <div class="mission-title">Our Mission</div>
-    <p class="mission">
-      "The platform connects experiences between lessors and lessees, generating
-      revenue for the domestic economy, bringing unique travel experiences and
-      contributing to promoting Vietnam&#39;s cultural image to international
-      friends."
-    </p>
-    <div class="vision-title">Our Vision</div>
-    <p class="vision">
-      "Tourism approaches local cultural characteristics, aiming to enhance the
-      user experience when traveling by establishing connections with local
-      hosts, accessing each distinct culture in different locations where
-      customers visit."
-    </p>
-  </div>
+<div class="mission-vision">
+  <div class="mission-title">Our Mission</div>
+  <p class="mission">
+    "The platform connects experiences between lessors and lessees, generating
+    revenue for the domestic economy, bringing unique travel experiences and
+    contributing to promoting Vietnam&#39;s cultural image to international
+    friends."
+  </p>
+  <div class="vision-title">Our Vision</div>
+  <p class="vision">
+    "Tourism approaches local cultural characteristics, aiming to enhance the
+    user experience when traveling by establishing connections with local hosts,
+    accessing each distinct culture in different locations where customers
+    visit."
+  </p>
 </div>
 
-<!--Founders-->
 <div>
   <p class="founder-title">Meet our founders</p>
   <div class="image-container">
-    <img src="assets/images/image-1.png" />
-    <img src="assets/images/image-1.png" />
-    <img src="assets/images/image-1.png" />
-    <img src="assets/images/image-1.png" />
-    <img src="assets/images/image-1.png" />
+    <img src="assets/images/founder.png" />
+    <img src="assets/images/founder.png" />
+    <img src="assets/images/founder.png" />
+    <img src="assets/images/founder.png" />
+    <img src="assets/images/founder.png" />
   </div>
 </div>
 
-<!--Clients-->
-<div>
-  <div class="client"><p class="client-title">What Our Clients Say?</p></div>
-  <img src="assets/svg/1.svg" class="ngoac" />
+<div class="client">
+  <p class="client-title">What Our Clients Say?</p>
+  <img src="assets/svg/quotation.svg" class="quotation-mark" />
   <p class="comment">
-    Leverage agile frameworks to provide a robust synopsis for high level
-    overviews. Iterative approaches to corporate strategy foster collaborative
-    thinking&nbsp;&nbsp;further overall value proposition organicallfriendly.
+    The owner also assisted with contact information for famous local tourist
+    destinations, she also facilitated a change in the check-out time compared
+    to the plan so that the team was so happy.
   </p>
-  <img src="assets/svg/1.svg" class="ngoac-flip" />
-  <p class="client-name">To Hoang Ngoc Han</p>
+  <img src="assets/svg/quotation.svg" class="quotation-mark-flip" />
+  <p class="client-name">To Ngoc Han</p>
 </div>
